# policy-diff-lab

./: .gitignore  README.md  pyproject.toml
apps/: streamlit_app.py
docs/: SOTA.md
src/policydiff/: __init__.py  __main__.py  cli.py  did.py  panel.py  pipeline.py
tests/: test_pipeline.py
